@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package "Customer Model" as CustomerModel {
    class Person

    class Customer {
        - customerId: CustomerId
        - rewardPoints: RewardPoints
        - visitCount: VisitCount
        - favouriteItem: FavouriteItem
        - totalSpent: TotalSpent
        + getCustomerId(): CustomerId
        + getRewardPoints(): RewardPoints
        + getVisitCount(): VisitCount
        + getFavouriteItem(): FavouriteItem
        + getTotalSpent(): TotalSpent
        + addRewardPoints(int): void
        + deductRewardPoints(int): void
        + incrementVisitCount(): void
        + updateTotalSpent(double): void
        + isSameCustomer(otherCustomer): boolean
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
    }

    class CustomerId {
        - {static} MESSAGE_CONSTRAINTS: String
        - {static} VALIDATION_REGEX: String
        - customerId: String
        + getCustomerId(): String
        + {static} isValidCustomerId(String): boolean
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
    }

    class RewardPoints {
        - {static} MESSAGE_CONSTRAINTS: String
        - points: int
        + getPoints(): int
        + {static} isValidPoints(int): boolean
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
    }

    class VisitCount {
        - {static} MESSAGE_CONSTRAINTS: String
        - count: int
        + getCount(): int
        + {static} isValidCount(int): boolean
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
    }

    class FavouriteItem {
        - {static} MESSAGE_CONSTRAINTS: String
        - item: String
        + getItem(): String
        + {static} isValidItem(String): boolean
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
    }

    class TotalSpent {
        - {static} MESSAGE_CONSTRAINTS: String
        - amount: double
        + getAmount(): double
        + {static} isValidAmount(double): boolean
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
    }

    class UniquePersonList {
        - internalList: ObservableList<Person>
        - internalUnmodifiableList: ObservableList<Person>
        + contains(Person): boolean
        + add(Person): void
        + setPerson(Person, Person): void
        + remove(Person): void
        + setPersons(List<Person>): void
        + setPersons(UniquePersonList): void
        + asUnmodifiableObservableList(): ObservableList<Person>
        + getFilteredList<T extends Person>(Class<T>): FilteredList<T>
        + iterator(): Iterator<Person>
        + equals(Object): boolean
        + hashCode(): int
        + toString(): String
        - personsAreUnique(List<Person>): boolean
    }
}

Customer -up-|> Person
Customer *--> "1" CustomerId
Customer *--> "1" RewardPoints
Customer *--> "1" VisitCount
Customer *--> "1" FavouriteItem
Customer *--> "1" TotalSpent

UniquePersonList o--> "*" Customer
UniquePersonList ..|> "Iterable<Person>" : implements

@enduml
